implemented core functionality for Facebook fetch and youtube integration

--- a/app/views/about.html
+++ b/app/views/about.html
@@ -1,1 +1,5 @@
-<p>This is the about view.</p>
+<p>This page is created by</p>
+
+<div class="well">Äche Zu
+<a ng-href="http://facebook.com/aechezu" target="_blank">facebook.com/aechezu</a>
+</div>
